--- a/app/check.html
+++ b/app/check.html
@@ -1,94 +1,209 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>DG STORE Redemption UI</title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico" />
-	</head>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>DG STORE Redemption UI</title>
+
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<!-- Place favicon.ico in the root directory -->
+
+	<!-- build:css styles/vendor.css -->
+	<!-- bower:css -->
+	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+	<!-- endbower -->
+	<!-- endbuild -->
+
+	<!-- build:css styles/main.css -->
+
+	<link rel="stylesheet" href="styles/font-awesome.min.css">
+		<link rel="stylesheet" href="styles/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/theme.min.css">
+		<link rel="stylesheet" href="styles/main.css">
+
+	<!-- endbuild -->
+
+	<!-- build:js scripts/vendor/modernizr.js -->
+	<script src="/bower_components/modernizr/modernizr.js"></script>
+	<!-- endbuild -->
+</head>
 	<body>
-		<a href="StreamDemo.html" style="position:absolute;left:350px;">GetUserMedia Demo</a>
-		<div id="container">
-			<canvas width="320" height="240" id="picture" style="border: solid 1px;"></canvas>
-			<input id="Take-Picture" type="file" accept="image/*;capture=camera" />
-			<p id="textbit"></p>
-		</div>
-		<script type="text/javascript" src="JOB.js"></script>
-		<script type="text/javascript">
-			var takePicture = document.querySelector("#Take-Picture"),
-			showPicture = document.createElement("img");
-			Result = document.querySelector("#textbit");
-			var canvas =document.getElementById("picture");
-			var ctx = canvas.getContext("2d");
-			JOB.Init();
-			JOB.SetImageCallback(function(result) {
-				if(result.length > 0){
-					var tempArray = [];
-					for(var i = 0; i < result.length; i++) {
-						tempArray.push(result[i].Format+" : "+result[i].Value);
-					}
-					Result.innerHTML=tempArray.join("<br />");
-				}else{
-					if(result.length === 0) {
-						Result.innerHTML="Decoding failed.";
-					}
-				}
-			});
-			JOB.PostOrientation = true;
-			JOB.OrientationCallback = function(result) {
-				canvas.width = result.width;
-				canvas.height = result.height;
-				var data = ctx.getImageData(0,0,canvas.width,canvas.height);
-				for(var i = 0; i < data.data.length; i++) {
-					data.data[i] = result.data[i];
-				}
-				ctx.putImageData(data,0,0);
-			};
-			JOB.SwitchLocalizationFeedback(true);
-			JOB.SetLocalizationCallback(function(result) {
-				ctx.beginPath();
-				ctx.lineWIdth = "2";
-				ctx.strokeStyle="red";
-				for(var i = 0; i < result.length; i++) {
-					ctx.rect(result[i].x,result[i].y,result[i].width,result[i].height);
-				}
-				ctx.stroke();
-			});
-			if(takePicture && showPicture) {
-				takePicture.onchange = function (event) {
-					var files = event.target.files;
-					if (files && files.length > 0) {
-						file = files[0];
-						try {
-							var URL = window.URL || window.webkitURL;
-							showPicture.onload = function(event) {
-								Result.innerHTML="";
-								JOB.DecodeImage(showPicture);
-								URL.revokeObjectURL(showPicture.src);
-							};
-							showPicture.src = URL.createObjectURL(file);
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="index.html">Brand</a>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="active"><a href="check.html"><i class="fa fa-search fa-fw"></i><span class="hidden-sm">&nbsp;Check</span></a></li>
+
+						<li><a href="reports.html"><i class="fa fa-line-chart fa-fw"></i><span class="hidden-sm">&nbsp;Reports</span></a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cog fa-fw"></i><span class="hidden-sm">&nbsp;Account</span><span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="help.html">Help</a></li>
+								<li><a href="password.html">Change Password</a></li>
+								<li role="separator" class="divider"></li>
+								<li><a href="login.html">Logout</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+
+		<!-- /. CONTAINER  -->
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="panel panel-default">
+						<div class="panel-body">
+						<p class="lead">Card Details<br /><small>Enter the barcode on the Gift Card:</small></p>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="panel panel-default">
+      		  <div class="panel-body">
+      		  	<div class="form-group form-group-lg">
+                <div class="col-sm-6">
+      		  	      <input class="form-control" type="text" autofocus="autofocus" placeholder="Barcode Number" id="barcode">
+      		  		</div>
+								<div class="col-sm-6">
+								<button type="submit" class="fileUpload btn btn-primary  btn-block"><i class="fa fa-camera"></i> Take a Picture
+									<input id="Take-Picture" type="file" class="upload" accept="image/*;capture=camera" />
+								</div>
+      		  	</div>
+
+      		  </div>
+      		  <div class="panel-footer">
+      		  	<button type="submit" class="btn btn-primary btn-block btn-lg"><i class="fa fa-search"></i>&nbsp;Check</button>
+      		  </div>
+      		</div>
+
+				</div>
+
+			</div>
+
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="panel panel-default">
+						<div class="panel-body">
+						<p class="lead">SCAN<br /><small>Image scanned</small></p>
+						<br>
+						<canvas width="320" height="240" id="picture" style="border: solid 1px;"></canvas>
+						<p id="textbit"></p>
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+
+			<!-- /. CANAVAS DISPLAY SCAN  -->
+			<!-- <div id="container">
+				<canvas width="320" height="240" id="picture" style="border: solid 1px;"></canvas>
+				<input id="Take-Picture" type="file" accept="image/*;capture=camera" />
+				<p id="textbit"></p>
+			</div> -->
+
+			<script type="text/javascript" src="JOB.js"></script>
+			<script type="text/javascript">
+				var takePicture = document.querySelector("#Take-Picture"),
+				showPicture = document.createElement("img");
+				Result = document.querySelector("#textbit");
+				var canvas =document.getElementById("picture");
+				var ctx = canvas.getContext("2d");
+				JOB.Init();
+				JOB.SetImageCallback(function(result) {
+					if(result.length > 0){
+						var tempArray = [];
+						for(var i = 0; i < result.length; i++) {
+							tempArray.push(result[i].Format+" : "+result[i].Value);
 						}
-						catch (e) {
+						Result.innerHTML=tempArray.join("<br />");
+					}else{
+						if(result.length === 0) {
+							Result.innerHTML="Decoding failed.";
+						}
+					}
+				});
+				JOB.PostOrientation = true;
+				JOB.OrientationCallback = function(result) {
+					canvas.width = result.width;
+					canvas.height = result.height;
+					var data = ctx.getImageData(0,0,canvas.width,canvas.height);
+					for(var i = 0; i < data.data.length; i++) {
+						data.data[i] = result.data[i];
+					}
+					ctx.putImageData(data,0,0);
+				};
+				JOB.SwitchLocalizationFeedback(true);
+				JOB.SetLocalizationCallback(function(result) {
+					ctx.beginPath();
+					ctx.lineWIdth = "2";
+					ctx.strokeStyle="red";
+					for(var i = 0; i < result.length; i++) {
+						ctx.rect(result[i].x,result[i].y,result[i].width,result[i].height);
+					}
+					ctx.stroke();
+				});
+				if(takePicture && showPicture) {
+					takePicture.onchange = function (event) {
+						var files = event.target.files;
+						if (files && files.length > 0) {
+							file = files[0];
 							try {
-								var fileReader = new FileReader();
-								fileReader.onload = function (event) {
-									showPicture.onload = function(event) {
-										Result.innerHTML="";
-										JOB.DecodeImage(showPicture);
-									};
-									showPicture.src = event.target.result;
+								var URL = window.URL || window.webkitURL;
+								showPicture.onload = function(event) {
+									Result.innerHTML="";
+									JOB.DecodeImage(showPicture);
+									URL.revokeObjectURL(showPicture.src);
 								};
-								fileReader.readAsDataURL(file);
+								showPicture.src = URL.createObjectURL(file);
 							}
 							catch (e) {
-								Result.innerHTML = "Neither createObjectURL or FileReader are supported";
+								try {
+									var fileReader = new FileReader();
+									fileReader.onload = function (event) {
+										showPicture.onload = function(event) {
+											Result.innerHTML="";
+											JOB.DecodeImage(showPicture);
+										};
+										showPicture.src = event.target.result;
+									};
+									fileReader.readAsDataURL(file);
+								}
+								catch (e) {
+									Result.innerHTML = "Neither createObjectURL or FileReader are supported";
+								}
 							}
 						}
-					}
-				};
-			}
-		</script>
+					};
+				}
+			</script>
+
+			<!-- /. END CONTAINER  -->
+		</div>
+
 	</body>
 </html>
