copy button paste result of the scan into input. | remove br and code type

--- a/app/check.html
+++ b/app/check.html
@@ -124,6 +124,8 @@
 				var takePicture = document.querySelector("#Take-Picture"),
 				showPicture = document.createElement("img");
 				Result = document.querySelector("#textbit");
+
+				//copy result content paste it inside input
 				$('#btn').click(function () {
 					var sticazzi = $('#textbit').html();
 					$('#barcode').val(sticazzi);
