--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DG STORE Redemption UI</title>
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Place favicon.ico in the root directory -->
 
     <!-- build:css styles/vendor.css -->
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="check.html"><i class="fa fa-search fa-fw"></i><span class="hidden-sm">&nbsp;Check</span></a></li>
-
+            <li><a href="purchase.html"><i class="fa fa-dollar fa-fw"></i><span class="hidden-sm">&nbsp;Purchase</span></a></li>
             <li><a href="reports.html"><i class="fa fa-line-chart fa-fw"></i><span class="hidden-sm">&nbsp;Reports</span></a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cog fa-fw"></i><span class="hidden-sm">&nbsp;Account</span><span class="caret"></span></a>
@@ -67,11 +67,11 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-      	<div class="col-sm-6">
+      	<div class="col-sm-4">
       		<a href="check.html" class="link-tile">
       			<div class="panel panel-default">
       			  <div class="panel-body">
-      			    <p class="lead text-center item"><i class="fa fa-search"></i>Check and Redeem a Gift Card</p>
+      			    <p class="lead text-center item"><i class="fa fa-search"></i>Check and Redeem a store card</p>
       			  </div>
       			  <div class="panel-footer text-center">
       			  	<span class="btn btn-primary btn-block btn-lg"><i class="fa fa-search"></i>&nbsp;Check</span>
@@ -79,8 +79,19 @@
       			</div>
       		</a>
       	</div>
-
-      	<div class="col-sm-6">
+      	<div class="col-sm-4">
+      		<a href="purchase.html" class="link-tile">
+      			<div class="panel panel-default">
+      			  <div class="panel-body">
+      			    <p class="lead text-center item"><i class="fa fa-dollar"></i>Purchase and Activate a new store card</p>
+      			  </div>
+      			  <div class="panel-footer text-center">
+      			  	<span class="btn btn-primary btn-block btn-lg"><i class="fa fa-dollar"></i>&nbsp;Purchase</span>
+      			  </div>
+      			</div>
+      		</a>
+      	</div>
+      	<div class="col-sm-4">
       		<a href="reports.html" class="link-tile">
       			<div class="panel panel-default item">
       			  <div class="panel-body">
