--- a/app/details-history.html
+++ b/app/details-history.html
@@ -78,65 +78,41 @@
       		<div class="panel panel-default">
       		  <div class="panel-body with-table">
 
+<table class="table table-hover table-bordered table-responsive">
+	<thead>
+		<th>Id</th>
+		<th>Transacted Store</th>
+		<th>Transacted Amount</th>
+	</thead>
+	<tbody>
+		<tr>
+			<td>2</td>
+			<td>Manly Store (MNS)</td>
+			<td>$1.00 Dr</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>Manly Store (MNS)</td>
+			<td>$2.00 Dr</td>
+		</tr>
+		<tr>
+			<td>4</td>
+			<td>Manly Store (MNS)</td>
+			<td>$2.00 Cr</td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td>Manly Store (MNS)</td>
+			<td>$5.00 Dr</td>
 
-      		  	 <table class="table table-hover table-bordered">
-      		  	 	<thead>
-      		  	 		<th>Id</th>
-      		  	 		<th>Transacted Store</th>
-      		  	 		<th>Transacted Amount</th>
-      		  	 		<th>Action</th>
-      		  	 	</thead>
-      		  	   	<tbody>
-                     <tr>
-                         <td>2</td>
-                         <td>Manly Store (MNS)</td>
-                         <td>$1.00 Dr</td>
- 						<td>
-                              <span>N/A</span>
-                         </td>
-                     </tr>
-                     <tr>
-                         <td>3</td>
-                         <td>Manly Store (MNS)</td>
-                         <td>$2.00 Dr</td>
- <td>
-                              <span>N/A</span>
-                         </td>
-                     </tr>
-                     <tr>
-                         <td>4</td>
-                         <td>Manly Store (MNS)</td>
-                         <td>$2.00 Cr</td>
- <td>
-                              <span>N/A</span>
-                         </td>
-                     </tr>
-                     <tr>
-                         <td>5</td>
-                         <td>Manly Store (MNS)</td>
-                         <td>$5.00 Dr</td>
- <td>
-                              <span>N/A</span>
-                         </td>
-                     </tr>
-                     <tr>
-                         <td>17</td>
-                         <td>Pitt Water store (PWS)</td>
-                         <td>$5.00 Dr</td>
-      		  	   	 <td>
-
-      		  	   	 <form method="post" action="">
-      		  	   	 	<select class="form-control in-table">
-      		  	   	 	<option value="">- Select -</option>
-  		  	   	 		<option value="3">Manly Store (MNS)</option>
-  		  	   	 		<option value="4">Pitt Water store (PWS)</option>
-  		  	   	 		<option value="5">Test Store (TestCode)</option>
-  		  	   	 		</select>
-      		  	   	 </form>
-      		  	   	                         </td>
-      		  	   	                     </tr>
-      		  	   	             </tbody>
-      		  	 </table>
+		</tr>
+		<tr>
+			<td>17</td>
+			<td>Pitt Water store (PWS)</td>
+			<td>$5.00 Dr</td>
+		</tr>
+	</tbody>
+</table>
 
       		  </div>
       		  <div class="panel-footer">
