--- a/app/reports.html
+++ b/app/reports.html
@@ -70,7 +70,7 @@
       	 	<div class="panel panel-default">
       	 	  <div class="panel-body with-table">
       	 	  	<p class="lead">Graph</p>
-      	 	  	<img src="img/chart3.jpg" width="100%" class="img-responsive" />
+      	 	  	<img src="images/chart3.jpg" width="100%" class="img-responsive" />
       	 	  </div>
       	 	</div>
       	 </div>
@@ -78,7 +78,7 @@
       	 	<div class="panel panel-default">
       	 	  <div class="panel-body with-table">
       	 	  	<p class="lead">Report</p>
-      	 	  	<img src="img/chart4.jpg" width="100%" class="img-responsive" />
+      	 	  	<img src="images/chart4.jpg" width="100%" class="img-responsive" />
       	 	  </div>
       	 	</div>
       	 </div>
@@ -86,7 +86,7 @@
       	 	<div class="panel panel-default">
       	 	  <div class="panel-body with-table">
       	 	  	<p class="lead">Chart</p>
-      	 	  	<img src="img/chart2.jpg" width="100%" class="img-responsive" />
+      	 	  	<img src="images/chart2.jpg" width="100%" class="img-responsive" />
       	 	  </div>
       	 	</div>
       	 </div>
