--- a/app/check.html
+++ b/app/check.html
@@ -86,6 +86,7 @@
 			<div class="col-sm-12">
 
 					<div class="panel panel-default">
+
 						<div class="panel-body">
 							<div class="form-group form-group-lg">
                 <div class="col-sm-10">
@@ -97,7 +98,7 @@
 								</div>
       		  	</div>
 						</div>
-							<form action="details-activated.html" class="form">
+						<form action="details-activated.html" class="form">
 						<div class="panel-footer">
 							<button type="submit" class="btn btn-primary btn-block btn-lg"><i class="fa fa-search"></i>&nbsp;Check</button>
 						</div>
@@ -150,9 +151,9 @@
 					Result.innerHTML = tempArray.slice(0, 1);
 					document.getElementById("barcode").value = Result.innerHTML;
 
-					console.log('%c Lunghezza', 'background: #222; color: #bada55', tempArray);
-
-					console.log('%c entraz', 'background: #222; color: #bada55', Result.innerHTML);
+					// console.log('%c Lunghezza', 'background: #222; color: #bada55', tempArray);
+					//
+					// console.log('%c entraz', 'background: #222; color: #bada55', Result.innerHTML);
 				} else {
 					if (result.length === 0) {
 
