--- a/app/password-forgot.html
+++ b/app/password-forgot.html
@@ -38,7 +38,7 @@
             	<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
             		<form action="index.html" class="form">
             			<div class="login-logo">
-            				<img src="img/client-logo.png" />
+            				<img src="images/client-logo.png" />
             			</div>
             			<div class="panel panel-default">
             			  <div class="panel-body with-table">
